# nbody_rust_simu

./: .gitignore  Cargo.toml  cpp_build.rs
src/: global.rs  main.rs  seq.rs
src/brute_force/: mod.rs
src/geometry/: body.rs  shape.rs
src/mpi_eng/: mod.rs
src/openmp/: mod.rs
src/pthread/: mod.rs  pool.rs
src/quad_tree/: node.rs
src/rayon_eng/: mod.rs
